...
            app:boxCornerRadiusBottomEnd="14dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintTextColor="@color/aa_primary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Full Name"
                android:textColor="@color/aa_text"
                android:inputType="textPersonName"
                android:padding="16dp" />
...
            app:boxCornerRadiusBottomEnd="14dp"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:hintTextColor="@color/aa_primary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email"
                android:textColor="@color/aa_text"
                android:inputType="textEmailAddress"
                android:padding="16dp" />
...
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:passwordToggleEnabled="true"
            app:hintTextColor="@color/aa_primary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:textColor="@color/aa_text"
                android:inputType="textPassword"
                android:padding="16dp" />
...
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:passwordToggleEnabled="true"
            app:hintTextColor="@color/aa_primary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Confirm Password"
                android:textColor="@color/aa_text"
                android:inputType="textPassword"
                android:padding="16dp" />
...
                android:paddingEnd="16dp" />

        </androidx.cardview.widget.CardView>

        <!-- CREATE ACCOUNT BUTTON -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_signup"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:text="Create Account"
            android:textAllCaps="false"
            android:textSize="16sp"
            android:textStyle="bold"
...
